Criando e alocando projeto unity portfolio3d no projeto de portfolio web

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,6 +23,7 @@
   <nav>
     <div class="logo">BARROSGUIH</div>
     <div class="nav-links">
+      <a href="#" onclick="toggleCurriculo(event)">Curriculo3D</a>
       <a href="#work">Projetos</a>
       <a href="#about">Experiência</a>
       <a href="#contact">Contato</a>
@@ -36,12 +37,24 @@
         <div class="hero-text">
           <h1>GUI<span>H B</span>ARROS</h1>
           <p>
-            Técnico em Informática pelo IFPB e graduando em ADS. <br/>Desenvolvedor full stack.
+            Técnico em Informática pelo IFPB e graduando em ADS. <br />Desenvolvedor full stack.
             Explore meu mundo e descubra meus projetos.
           </p>
         </div>
 
         <img src="../../assets/image.jpg" alt="Foto de Guilherme Barros">
+      </div>
+    </section>
+
+    <section class="unity-section hidden" id="curriculo3d">
+      <div class="unity-header">
+        <h2>Currículo Interativo 3D</h2>
+        <button onclick="toggleCurriculo()">✕ Fechar</button>
+      </div>
+
+      <div class="unity-container">
+        <iframe src="../../unity/portfolio/index.html" loading="lazy" allowfullscreen>
+        </iframe>
       </div>
     </section>
 
@@ -83,14 +96,76 @@
           </div>
           <a href="#" class="view-btn">VER PROJETO</a>
         </div>
+
+        <!-- Projeto 4 -->
+        <div class="project-card">
+          <div>
+            <div class="tag">JAVA</div>
+            <h3>Mechanic-stock-java</h3>
+            <p>sistema de controle de estoque de peças e lubrificantes automotivos desenvolvido em Java. Permite
+              gerenciar entradas e saídas de produtos, controlar quantidades em estoque e registrar o histórico de
+              movimentações.</p>
+          </div>
+          <a href="https://github.com/barrosGuih/Mechanic-stock-java" class="view-btn">VER PROJETO</a>
+        </div>
+
+        <!-- Projeto 5 -->
+        <div class="project-card">
+          <div>
+            <div class="tag">JAVA</div>
+            <h3>Mechanic-stock-java</h3>
+            <p>sistema de controle de estoque de peças e lubrificantes automotivos desenvolvido em Java. Permite
+              gerenciar entradas e saídas de produtos, controlar quantidades em estoque e registrar o histórico de
+              movimentações.</p>
+          </div>
+          <a href="https://github.com/barrosGuih/Mechanic-stock-java" class="view-btn">VER PROJETO</a>
+        </div>
+
+        <!-- Projeto 6 -->
+        <div class="project-card">
+          <div>
+            <div class="tag">JAVA</div>
+            <h3>Mechanic-stock-java</h3>
+            <p>sistema de controle de estoque de peças e lubrificantes automotivos desenvolvido em Java. Permite
+              gerenciar entradas e saídas de produtos, controlar quantidades em estoque e registrar o histórico de
+              movimentações.</p>
+          </div>
+          <a href="https://github.com/barrosGuih/Mechanic-stock-java" class="view-btn">VER PROJETO</a>
+        </div>
+
+        <!-- Projeto 7 -->
+        <div class="project-card">
+          <div>
+            <div class="tag">JAVA</div>
+            <h3>Mechanic-stock-java</h3>
+            <p>sistema de controle de estoque de peças e lubrificantes automotivos desenvolvido em Java. Permite
+              gerenciar entradas e saídas de produtos, controlar quantidades em estoque e registrar o histórico de
+              movimentações.</p>
+          </div>
+          <a href="https://github.com/barrosGuih/Mechanic-stock-java" class="view-btn">VER PROJETO</a>
+        </div>
+
+        <!-- Projeto 8 -->
+        <div class="project-card">
+          <div>
+            <div class="tag">JAVA</div>
+            <h3>Mechanic-stock-java</h3>
+            <p>sistema de controle de estoque de peças e lubrificantes automotivos desenvolvido em Java. Permite
+              gerenciar entradas e saídas de produtos, controlar quantidades em estoque e registrar o histórico de
+              movimentações.</p>
+          </div>
+          <a href="https://github.com/barrosGuih/Mechanic-stock-java" class="view-btn">VER PROJETO</a>
+        </div>
       </div>
+
+
     </section>
   </main>
 
   <footer>
     <div class="cta-box">
-      <h2>VAMOS TRABALHAR NO SEU PRÓXIMO GRANDE PROJETO?</h2>
-      <a href="mailto:contato@exemplo.com" class="email-btn">CONTATAR AGORA</a>
+      <h2></h2>
+      <a href="mailto:contato@exemplo.com" class="email-btn"></a>
     </div>
     <p style="color: var(--text-dim); font-size: 0.8rem; letter-spacing: 2px;">
       © 2024 GUIHERME BARROS // DISPONÍVEL PARA NOVOS DESAFIOS
