--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guih Barros // Desenvolvedor Full Stack</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- Background FX -->
@@ -80,7 +80,7 @@
                     <a href="#" class="project-item">
                         <div class="project-img-container">
                             <div class="img-overlay">ACESSAR_DADOS</div>
-                            <img src="../../assets/projeto1.jpg" alt="">
+                            <img src="./projeto1.jpg" alt="">
                         </div>
                         <div class="project-details">
                             <h3>INCLUIR+ WEB</h3>
@@ -108,6 +108,6 @@
         </div>
     </div>
 
-    <script src="../js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
